<resources>
    <string name="app_name">MobileHotelManagementSystem</string>
    <string name="title_activity_payment">Payment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="back1">Back</string>
    <string name="search_service">Search Service</string>
    <string name="search1">Search</string>
    <string name="sign_up_page">Sign Up Page</string>
    <string name="room_services_page">Room Services Page</string>
    <string name="check_out">Check-Out</string>
    <string name="logout">LOGOUT</string>
    <string name="check_in">Check-In</string>
    <string name="room_maintenance">Room Maintenance</string>
    <string name="staff_maintenance">Staff Maintenance</string>
    <string name="room_services">Room Services</string>
    <string name="room_reservation">Room Reservation</string>
    <string name="back3">Back</string>
    <string name="payment1">Payment</string>
    <string name="customer_service_charge">Customer Service Charge</string>
    <string name="payment">Payment</string>
    <string name="room_no">Room No</string>
    <string name="name">Name</string>
    <string name="check_out_date">Check Out Date</string>
    <string name="submit">SUBMIT</string>
    <string name="get">GET</string>
    <string name="no_of_children">No. of Children</string>
    <string name="no_of_adult">No. of Adult</string>
    <string name="deluxe_room">Deluxe Room</string>
    <string name="executive_room">Executive Room</string>
    <string name="room_information">Room Information</string>
    <string name="phone_number">Phone Number :</string>
    <string name="back2">BACK</string>
    <string name="reservation">Reservation</string>
    <string name="back">Back</string>
    <string name="check_in_page">Check In Page</string>
    <string name="check_out_page">check_Out_page</string>
    <string name="submit1">Submit</string>
    <string name="check_out_date1">Check Out Date</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="don_t_have_account">Don\'t have Account?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login_page">Login Page</string>
    <string name="no_of_days">No. of days</string>
    <string name="reservation_page">Reservation Page</string>
    <string name="textview">TextView</string>
    <string name="payment_page1">Payment Page</string>
    <string name="payment_page">Payment Page</string>
    <string name="housekeeping">Housekeeping</string>
    <string name="room_no1">Room No :</string>
    <string name="spa_services">SPA Services</string>
    <string name="breakfast">Breakfast</string>
    <string name="dry_cleaning_and_laundry">Dry cleaning and laundry</string>
    <string name="search">Search</string>
    <string name="confirm">Confirm</string>
    <string name="back4">Back</string>
    <string name="room_details1">Room Details</string>
    <string name="room_details">Room Details</string>
</resources>